# caps2esc

./: caps2esc.service  meson.build
